--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
+    "history": "4.7.2",
     "moment": "^2.24.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -34,7 +35,7 @@
     "react-dom": "16.4.2",
     "react-modal": "^3.8.1",
     "react-redux": "5.0.5",
-    "react-router-dom": "4.2.2",
+    "react-router-dom": "5.0.1",
     "redux": "3.7.2",
     "redux-mock-store": "1.2.3",
     "redux-thunk": "2.2.0",
